# DON'T EDIT THIS!
#
# Codecrafters relies on this file being intact to run tests successfully. Any changes
# here will not reflect when CodeCrafters tests your code, and might even cause build
# failures.
#
# DON'T EDIT THIS!
[package]
name = "shell-starter-rust"
version = "0.1.0"
authors = ["Codecrafters <hello@codecrafters.io>"]
edition = "2021"

# DON'T EDIT THIS!
#
# Codecrafters relies on this file being intact to run tests successfully. Any changes
# here will not reflect when CodeCrafters tests your code, and might even cause build
# failures.
#
# DON'T EDIT THIS!
[dependencies]
anyhow = "1.0"                                # error handling
bytes = "1.10"                                  # helps manage buffers
crossterm = "0.29"
itertools = "0.14"
regex = "1.11"
thiserror = "2.0"                             # error handling
memfile = "0.3"
ptrie = "0.7"

[dev-dependencies]
pretty_assertions = "1.4.1"
